--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -18,7 +18,7 @@
 }
 
 i.bi {
-    font-size: 18px;
+    font-size: 16px;
 }
 
 html,
@@ -49,7 +49,13 @@ note-header {
     align-items: center;
 }
 
-note-header button {
+note-header .header-option {
+    display: flex;
+    column-gap: 10px;
+}
+
+note-header button,
+note-header sort-note {
     color: white;
     background-color: var(---bg-header-light);
     height: fit-content;
@@ -67,6 +73,10 @@ note-header button {
     column-gap: 4px;
 }
 
+note-header sort-note {
+    display: block;
+}
+
 note-header button i {
     font-weight: bold;
     font-size: large;
@@ -75,6 +85,10 @@ note-header button i {
 [is=my-notes] {
     overflow: hidden;
     margin: 0 10px;
+}
+
+[is=my-notes] note-header {
+    display: none;
 }
 
 note-item div {
