--- a/app/styles/768px.css
+++ b/app/styles/768px.css
@@ -1,3 +1,34 @@
-body #content {
-    background-color: blue;
+[is=my-notes] {
+    display: flex;
+    padding: 0 10px;
+    column-gap: 20px;
+}
+
+note-list {
+    max-width: 360px;
+    max-height: calc(100vh - 70.1px);
+    overflow-y: scroll;
+    padding-right: 10px;
+}
+
+note-detail {
+    flex-grow: 1;
+    z-index: auto;
+    position: static;
+}
+
+note-detail.active {
+    z-index: auto;
+}
+
+note-detail header {
+    justify-content: end;
+}
+
+note-detail header #save-btn i.bi {
+    font-size: 20px !important;
+}
+
+note-detail .back-btn {
+    display: none;
 }
